infra/k8s-dev/account-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moove-account-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moove-account-db
  template:
    metadata:
      labels:
        app: moove-account-db
    spec:
      containers:
        - name: moove-account-db-cont
          image: postgres
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: moove-account-db-srv
spec:
  type: ClusterIP
  selector:
    app: moove-account-db
  ports:
    - name: moove-account-db-port
      protocol: TCP
      port: 5432
      targetPort: 5432
