infra/k8s-dev/account-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moove-account-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moove-account
  template:
    metadata:
      labels:
        app: moove-account
    spec:
      containers:
        - name: moove-account-cont
          image: faridmansimli/moove-account
          resources:
            limits:
              cpu: "1500m"
              memory: "500Mi"
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: moove-account-srv
spec:
  type: ClusterIP
  selector:
    app: moove-account
  ports:
    - name: moove-account-port
      protocol: TCP
      port: 3002
      targetPort: 3002
