infra/k8s-dev/auth-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moove-auth-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moove-auth-db
  template:
    metadata:
      labels:
        app: moove-auth-db
    spec:
      volumes:
        - name: moove-auth-db-pvc
          persistentVolumeClaim:
            claimName: moove-auth-db-pvc
      containers:
        - name: moove-auth-db-cont
          image: mongo
          volumeMounts:
            - name: moove-auth-db-pvc
              mountPath: /data/db
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "1500m"
              memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: moove-auth-db-srv
spec:
  type: ClusterIP
  selector:
    app: moove-auth-db
  ports:
    - name: moove-auth-db-port
      protocol: TCP
      port: 27017
      targetPort: 27017
