infra/k8s-dev/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moove-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moove-auth
  template:
    metadata:
      labels:
        app: moove-auth
    spec:
      containers:
        - name: moove-auth-cont
          image: faridmansimli/moove-auth
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "1500m"
              memory: "500Mi"
            requests:
              cpu: "500m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: moove-auth-srv
spec:
  type: ClusterIP
  selector:
    app: moove-auth
  ports:
    - name: moove-auth-port
      protocol: TCP
      port: 3001
      targetPort: 3001
