infra/k8s-dev/places-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moove-places-db-depl
spec:
  selector:
    matchLabels:
      app: moove-places-db
  template:
    metadata:
      labels:
        app: moove-places-db
    spec:
      volumes:
        - name: moove-places-db-pvc
          persistentVolumeClaim:
            claimName: moove-places-db-pvc
      containers:
        - name: moove-places-db-cont
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "1500m"
              memory: "500Mi"
          volumeMounts:
            - name: moove-places-db-pvc
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: moove-places-db-srv
spec:
  type: ClusterIP
  selector:
    app: moove-places-db
  ports:
    - name: moove-places-db-port
      protocol: TCP
      port: 27017
      targetPort: 27017
