infra/k8s-dev/places-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moove-places-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moove-places
  template:
    metadata:
      labels:
        app: moove-places
    spec:
      containers:
        - name: moove-places-cont
          image: faridmansimli/moove-places
          ports:
            - containerPort: 3003
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: moove-places-srv
spec:
  type: ClusterIP
  selector:
    app: moove-places
  ports:
    - name: moove-places-port
      protocol: TCP
      port: 3003
      targetPort: 3003
