infra/k8s-dev/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: myapp.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: moove-auth-srv
                port:
                  number: 3001

          - path: /api/account/?(.*)
            pathType: Prefix
            backend:
              service:
                name: moove-account-srv
                port:
                  number: 3002

          - path: /api/places/?(.*)
            pathType: Prefix
            backend:
              service:
                name: moove-places-srv
                port:
                  number: 3003
